# c_recipe_collection

./: .gitignore  CMakeLists.txt  a.out  build.sh  database.txt  main.c  readme.md  task_specification.md
enums/: menu.h
globals/: menu_choices.h  recipe.h  recipe_names.h  recipe_states.h  recipes_count.h  terminal.h  window.h
helpers/: all.h  clear_recipes.c  delete_recipe.c  edit_recipe.c  finish_recipe.c  get_recipes_count.c  get_terminal_size.c  init_recipe.c  load_recipes.c  mk_file.c  new_ingredient.c  new_recipe.c  quit.c  read_recipe_ingredient.c  read_recipe_instruction.c  read_recipe_name.c  reset_box.c  store_recipe.c
html/: annotated.html  classes.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  dir_6cae25715198b8e785d094ed2704a374.html  dir_861f50189fda057e6c57d1c1130602b3.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9f8fd3a02bcbb430c4113e4c9adc5311.html  dir_c7b7c939f7976c07b6a5a70b483e0207.html  dir_e4db62497e01360de151742c4c9ede63.html  dir_f2f9d8adab1c531b9e16958611d1c5b5.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  globals.html  globals_2recipe_8h.html  globals_2recipe_8h_source.html  globals_2terminal_8h.html  globals_2terminal_8h_source.html  globals_func.html  globals_vars.html  helpers_2all_8h.html  helpers_2all_8h_source.html  index.html  ingredient_8h.html  ingredient_8h_source.html  md_readme.html  md_task_specification.html  menu_8h_source.html  menu__choices_8h.html  menu__choices_8h_source.html  ncurses_2all_8h.html  ncurses_2all_8h_source.html  pages.html  recipe__names_8h.html  recipe__names_8h_source.html  (+13 more)
(+60 files in other folders)
